/*
 * $Id: ChangeLog,v 1.636 2003/01/19 23:15:21 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-01-21 07:30 UTC+0300 Phil Krylov <phil@mail.ru>
  * make_drw.sh
    * Allow building with gtcrs. 
  * include/hbdefs.h
    + Added HB_PCODE_MKSHORT, HB_PCODE_MKUSHORT, HB_PCODE_LONG,
      HB_PCODE_MKULONG, HB_PCODE_MK24BIT macros to handle platform-independent
      little-endian pcode on big-endian machines
  * source/compiler/genc.c
  * source/compiler/hbpcode.c
  * source/vm/hvm.c
    ! Use HB_PCODE_MK* to access pcode all over the place. It fixes most
      Darwin bugs and should improve performance a little on little-endian
      platforms too (as I think).
  * source/vm/codebloc.c
    ! Use HB_PCODE_MKUSHORT( pLocalPosTable++ ) in hb_codeblockNew(). This
      is done with an assumption that pLocalPosTable is always located inside
      pcode.
  * tests/Makefile
    * Adjusted Darwin configuration

2003-01-20 06:10 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
  * source/rtl/transfrm.c
    ! fixed bug reported by Vic< vic@guerra.com.mx>
      -> now using hb_retclenAdopt() instead of hb_retclen()

2003-01-20 04:40 UTC+0700 Andi Jahja <andijahja@harbour-id.net>
  * include/hbfast.h
  * include/hbapierr.h
  * include/hbdate.h
  * include/hbapilng.h
  * include/hbapirdd.h
  * source/rdd/dbcmd.c
  * source/vm/arrays.c
  * source/vm/errorapi.c
  * source/rtl/filesys.c
  * source/common/hbstr.c
    ! matching function declaration in header files with those
      of the function bodies'. Now that MSVC DLL works again.
  * hrbdll.bc
  * hrbdll.vc
    ! Modification to include flags: -DHB_NO_DEFAULT_API_MACROS -DHB_NO_DEFAULT_STACK_MACROS

2003-01-17 16:58 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
  * include/hbapirdd.h
  * include/hbrddcdx.h
  * source/rdd/dbfcdx/dbfcdx2.h