@@ -1,5 +1,5 @@
 /*
- * $Id: ppcore.c,v 1.36 2002/12/15 23:06:02 ronpinkas Exp $
+ * $Id: ppcore.c,v 1.37 2002/12/23 00:14:22 ronpinkas Exp $
  */
 
 /*
@@ -4245,7 +4245,7 @@ static int md_strAt( char * szSub, int lSubLen, char * szText, BOOL checkword, B
            {
               kolFig--;
            }
-           else if( szText[lPos] == '.' && szSub[0] != '.' )
+           else if( szText[lPos] == '.' && ( szSub[0] != '.' || szSub[1] == '\0' ) )
            {
               if( toupper( szText[lPos + 1] ) == 'T' && szText[lPos + 2] == '.' )
               {
