@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.636 2003/01/19 23:15:21 andijahja Exp $
+ * $Id: ChangeLog,v 1.637 2003/01/21 04:56:06 likewolf Exp $
  */
 
 /* Use this format for the entry headers:
@@ -8,9 +8,16 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2003-01-22 19:25 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/pp/ppcore.c
+    ! Fixed bug in md_strAt() when searching for '.'
+
+  * source/vm/hvm.c
+    + Added support for HB_GUI define, to exclude KB polling for Alt+C.
+
 2003-01-21 07:30 UTC+0300 Phil Krylov <phil@mail.ru>
   * make_drw.sh
-    * Allow building with gtcrs. 
+    * Allow building with gtcrs.
   * include/hbdefs.h
     + Added HB_PCODE_MKSHORT, HB_PCODE_MKUSHORT, HB_PCODE_LONG,
       HB_PCODE_MKULONG, HB_PCODE_MK24BIT macros to handle platform-independent
